# g8r

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  init.sql
.github/workflows/: build-and-release.yaml
examples/: router.ncl
examples/static-site/: base.ncl  dev-simplified.ncl  dev.ncl  prod.ncl  staging.ncl
experiments/connect/: Cargo.toml
experiments/connect/src/: main.rs
experiments/snapper/: .gitignore  Cargo.toml  config.yaml  example.yaml
experiments/snapper/src/: firefly.json  firefly.yaml  main.rs
experiments/snapper/src/modules/: mod.rs
experiments/snapper/src/utils/: config.rs  repo.rs
src/: lib.rs  main.rs  telemetry.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs  server.rs
src/cli/: mod.rs
src/controller/: mod.rs
src/db/: mod.rs  mod_tests.rs  models.rs  state.rs
src/duties/: echo.rs  mod.rs
src/execution/: context.rs
src/github/: client.rs  mod.rs
src/kv/: global_store.rs  mod.rs  stack_context.rs
src/modules/: echo.rs  mod.rs  rpmostree.rs  systemd_unit.rs
src/modules/aws/: README.md  acm_certificate.rs  aws_static_site.rs  cloudfront_distribution.rs  iam_user.rs  mod.rs  route53_record.rs  s3_bucket.rs  utils.rs
src/modules/aws/clients/: acm.rs  cloudfront.rs  iam.rs  mod.rs  route53.rs  s3.rs  traits.rs
src/modules/g8r_setup/: g8r_setup.rs
src/nickel/: evaluator.rs  mod.rs
src/queue/: manager.rs  mod.rs  mqtt.rs  source.rs
src/secrets/: env.rs  mod.rs  postgres.rs
src/stack/: git.rs  manager.rs  mod.rs  source.rs
src/utils/: config.rs  dag.rs  duty.rs  instruction.rs  mod.rs  repo.rs  roster.rs  task.rs
tests/: aws_integration_test.rs  nickel_runtime_integration_test.rs
