[package]
name = "g8r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
git2 = "0.18.1"
log = "0.4.20"
serde = { version = "1.0.193", features=["derive"] }
serde_derive = "1.0.193"
serde_yaml = "0.9.27"
serde_json = "1.0"
tera = "1.19.1"
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
duration-string = { version = "0.3.0", features = ["serde"]}