[package]
name = "g8r"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
git2 = "0.18.1"
log = "0.4.20"
serde = { version = "1.0.193", features=["derive"] }
serde_derive = "1.0.193"
serde_yaml = "0.9.27"
serde_json = "1.0"
tera = "1.19.1"
tokio = { version = "1", features = ["full"] }
url = "2.4.1"
duration-string = { version = "0.3.0", features = ["serde"]}
hostname = "0.3.1"

# AWS SDK
aws-config = "1.5"
aws-sdk-s3 = "1.58"
aws-sdk-cloudfront = "1.52"
aws-sdk-acm = "1.50"
aws-sdk-iam = "1.49"
aws-sdk-route53 = "1.49"

# Nickel integration
nickel-lang-core = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# GitHub API
octocrab = "0.39"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex
regex = "1.0"

# Environment variables
dotenvy = "0.15"

# Async
futures = "0.3"
async-trait = "0.1"

# Time
chrono = "0.4"

# UUID generation (for tests)
uuid = { version = "1.0", features = ["v4", "serde"] }

# Temp files
tempfile = "3.8"

# Cryptography (for GitHub secrets)
sodiumoxide = "0.2"
base64 = "0.22"

# HTTP Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
hyper = "1.0"

# Telemetry / Tracing
opentelemetry = "0.21"
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }
opentelemetry-stdout = "0.2"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.8"
