[package]
name = "snapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_yaml = "0.9.27"
tokio = { version = "1", features = ["full"] }
